--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ button {
 
 button:hover {
     background-color: rgb(101, 33, 165);
+    transform: translateY(-2px);
+    transition: .5s;
 }
 
 .container {
